--- a/ui/html/form.html
+++ b/ui/html/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <title>Одуванчики</title>
 </head>
 <body>
