Переложил по пакетам по другому

--- a/ui/html/form.html
+++ b/ui/html/form.html
@@ -23,11 +23,12 @@
 
 <form method="post">
 <div class="form">
-
-    <input type="text" name="Login" placeholder="Логин">
-    <input type="text" name="Password" placeholder="Пароль">
-    <input type="text" name="FirstName" placeholder="Имя">
-    <input type="text" name="LastName" placeholder="Фамилия">
+    <input type="text" name="Id" placeholder="id">
+    <input type="text" name="Question" placeholder="Вопрос">
+    <input type="text" name="AnswerTrue" placeholder="Правильно">
+    <input type="text" name="AnswerFals1" placeholder="Ответ">
+    <input type="text" name="AnswerFals2" placeholder="Ответ">
+    <input type="text" name="AnswerFals3" placeholder="Ответ">
 
     <button type="submit">Войти</button>
 
