--- a/static/html/form.html
+++ b/static/html/form.html
@@ -16,7 +16,7 @@
 {{/*        {{end}}*/}}
 
         <ul>
-            {{range .Users}}
+            {{range .Answers}}
                 <li><b>{{ . }}</b></li>
             {{end}}
         </ul>
