--- a/static/html/form.html
+++ b/static/html/form.html
@@ -29,11 +29,11 @@
 <form method="post">
 <div class="form">
     <input type="text" name="Id" placeholder="id">
-    <input type="text" name="Question" placeholder="Вопрос">
-    <input type="text" name="AnswerTrue" placeholder="Правильно">
-    <input type="text" name="AnswerFals1" placeholder="Ответ">
-    <input type="text" name="AnswerFals2" placeholder="Ответ">
-    <input type="text" name="AnswerFals3" placeholder="Ответ">
+    <input type="text" name="Question" placeholder="{{.Question}}">
+    <input type="text" name="Answer" placeholder="{{.Answer1}}">
+    <input type="text" name="Answer" placeholder="{{.Answer2}}">
+    <input type="text" name="Answer" placeholder="{{.Answer3}}">
+    <input type="text" name="Answer" placeholder="{{.Answer4}}">
 
     <button type="submit">Войти</button>
 
